# flow-gtd

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  init_flow.sh  pyproject.toml
.codex/: README.md
.cursor/agents/: code-reviewer.md
.cursor/rules/: project-overview.mdc  python-architect.mdc
docs/: PRD.md  patterns-and-lessons.md  strategy_audit_context.md
docs/features/: projects.md  resource-storage.md
docs/plans/: 2026-02-14-defer-feature-design.md  2026-02-14-defer-feature-implementation-plan.md  2026-02-14-inbox-add-to-existing-project-design.md  2026-02-14-inbox-add-to-existing-project-implementation-plan.md  2026-02-15-first-run-ux-design.md  2026-02-15-first-run-ux-implementation-plan.md  2026-02-16-phase-2-unified-navigation-design.md  2026-02-16-phase-2-unified-navigation-implementation-plan.md  2026-02-28-resource-storage-abstraction-design.md  2026-02-28-resource-storage-abstraction-implementation-plan.md  2026-03-01-professional-ops-full-ui-overhaul-design.md  2026-03-01-professional-ops-full-ui-overhaul-implementation-plan.md  2026-03-01-tui-panel-shortcuts-design.md  2026-03-01-tui-panel-shortcuts-implementation-plan.md  2026-03-09-daily-workspace-ui-refresh-design.md  2026-03-09-daily-workspace-ui-refresh-implementation-plan.md  2026-03-21-daily-recap-rename.md  2026-03-21-daily-workspace-calendar-reuse-design.md  2026-03-21-daily-workspace-calendar-reuse-implementation-plan.md  2026-03-21-daily-workspace-unplanned-delete-implementation.md  2026-04-05-worktree-env-bootstrap-design.md  2026-04-05-worktree-env-bootstrap-implementation-plan.md
flow/: cli.py  config.py  main.py
flow/core/: __init__.py  coach.py  defer_utils.py  engine.py  focus.py  rag.py  tagging.py
flow/database/: __init__.py  chroma_store.py  resources.py  sqlite.py  vector_store.py  vectors.py
flow/models/: __init__.py  item.py
flow/sync/: calendar.py  context_hook.py  reminders.py
flow/tui/: app.py
flow/utils/: llm.py  obsidian_cli.py
homebrew/: flow-gtd.rb.template
scripts/: setup_worktree_env.sh
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/unit/: test_action_screen_bindings.py  test_chroma_store.py  test_cli_main.py  test_coach.py  test_daily_workspace.py  test_daily_workspace_screen.py  test_defer_utils.py  test_engine.py  test_engine_resources.py  test_first_capture_screen.py  test_focus.py  test_focus_cleanup.py  (+18 more)
(+89 files in other folders)
